namespace GieudexPol.Application.DTOs
{
    public class AddFavoriteCurrencyDto
    {
        public string CurrencyCode { get; set; } = string.Empty;
    }
}
